WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221432
CrashTracer: com.apple.WebKit.Networking at WebKit: WebKit::ResourceLoadStatisticsDatabaseStore::setPrevalentResource
https://bugs.webkit.org/show_bug.cgi?id=221432
Summary
CrashTracer: com.apple.WebKit.Networking at WebKit: WebKit::ResourceLoadStati...
Kate Cheney
Reported
2021-02-04 15:40:54 PST
36 WebKit: WebKit::ResourceLoadStatisticsDatabaseStore::setPrevalentResource(WebCore::RegistrableDomain const&, WebKit::ResourceLoadPrevalence) <== 36 WebKit: WebKit::ResourceLoadStatisticsDatabaseStore::setPrevalentResource(WebCore::RegistrableDomain const&, WebKit::ResourceLoadPrevalence) 36 WebKit: WebKit::ResourceLoadStatisticsDatabaseStore::classifyPrevalentResources() 36 WebKit: WebKit::ResourceLoadStatisticsStore::processStatisticsAndDataRecords() 36 WebKit: WTF::Detail::CallableWrapper<WebKit::WebResourceLoadStatisticsStore::resourceLoadStatisticsUpdated(WTF::Vector<WebCore::ResourceLoadStatistics, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&)::$_54,
Attachments
Patch
(4.00 KB, patch)
2021-02-04 16:13 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.99 KB, patch)
2021-02-05 08:37 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2021-02-04 15:41:15 PST
<
rdar://problem/67069819
>
Kate Cheney
Comment 2
2021-02-04 16:13:39 PST
Created
attachment 419334
[details]
Patch
John Wilander
Comment 3
2021-02-04 17:11:46 PST
Comment on
attachment 419334
[details]
Patch Strange. r=me
Chris Dumez
Comment 4
2021-02-04 17:25:46 PST
Comment on
attachment 419334
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=419334&action=review
> Source/WebKit/NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:799 > + RELEASE_LOG_ERROR_IF_ALLOWED(m_sessionID, "%p - ResourceLoadStatisticsDatabaseStore::domainIDFromString failed. Statement: %s. Error message: %{private}s", this, scopedStatement.get()->query().utf8().data(), m_database.lastErrorMsg());
.get() is not needed.
Kate Cheney
Comment 5
2021-02-05 08:37:26 PST
Created
attachment 419413
[details]
Patch for landing
EWS
Comment 6
2021-02-05 09:11:43 PST
Committed
r272418
: <
https://trac.webkit.org/changeset/272418
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419413
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug